# CLaaS

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.claude/skills/clear-tinker-storage/: SKILL.md
.claude/skills/deploy-modal/: SKILL.md
.claude/skills/pr-feedback/: SKILL.md
.claude/skills/setup-local/: SKILL.md
.claude/skills/setup-modal/: SKILL.md
.claude/skills/setup-tinker/: SKILL.md
.claude/skills/setup-tinker-no-docker/: SKILL.md
.github/workflows/: ci.yml
claas/: __init__.py  api.py  cli.py  config.py  deploy.py  eval_dashboard.html  index.html  pagination.py  s3_utils.py  sdpo_loss.py  storage.py  teacher.py  tinker_inference_proxy.py  types.py  worker.py
claas/core/: config.py  sdpo_metrics.py  types.py
claas/core/configs/: base.yaml  local.yaml  modal.yaml  proxy.yaml  tinker.yaml
claas/dashboard/: eval_dashboard.py  feedback_dashboard.html  feedback_log.py  pagination.py  rendering.py
claas/eval/: README.md  __main__.py  capability.py  collapse.py  config.py  dashboard.py  logprob.py  metrics.py  plotting.py  preferences.py  runner.py  types.py  verifiers.py
claas/inference/: __init__.py  base.py  cache.py  helpers.py  tinker.py  vllm.py  vllm_control.py
claas/modal/: deploy.py  teacher_service.py  worker.py
claas/proxy/: inference_proxy.py  tinker_inference_proxy.py
claas/training/: README.md  cache.py  distillation.py  sdpo_loss.py  storage.py  teacher_helpers.py  teacher_service.py  worker.py
claas/training_engines/: __init__.py  base.py
data/feedback/: 20260217T184748-b5c94265842048948133af09e1fb4db8.json  20260217T184944-4741c07f6d8f4e72a9cc9d09b1e6c8df.json  20260217T185224-fb7b53d41960463cb989592dd54d4497.json  20260217T185449-5dc2c088674e4311ba8c3b8664e9befa.json  20260217T185647-f830e976d4be47dd8cc97b2d8bbfc3e8.json  20260217T185820-342a5f0802614295a8bb3300d91f849a.json  20260217T190021-035e7bf3a29d43009e54693fc0a1e49d.json  20260217T190214-690d477e22f6482486c5fa78679d18d5.json  20260217T190403-12ce48661ac24498bb93ea323513f28d.json  20260217T190523-084cd27bf24c4260a59d63c610f4f9b3.json
docker/: .env.example  .env.local.example  .env.tinker.example  Dockerfile.claas-api  Dockerfile.init  Dockerfile.openclaw  Dockerfile.proxy  Dockerfile.tinker  Dockerfile.tinker-claas-api  Dockerfile.tinker-init  Dockerfile.tinker-proxy  README.md  docker-compose.tinker.yml  docker-compose.yml
docker/scripts/: claas-api-entrypoint.sh  init-stack.py  openclaw-entrypoint.sh  start_vllm_qwen3_8b.sh
docs/: eval_plan.md  feedback_inplace_lora_plan.md  initial_plan.md  modal_topology.md
examples/: build_feedback_example.py  feedback_telegram_react.json
plugins/: README.md
plugins/claas-feedback/: index.ts  openclaw.plugin.json  package.json
scripts/: README.md  run_integration_tests.sh
scripts/eval/: __main__.py  capability.py  collapse.py  gemini.py  logprob.py  metrics.py  plotting.py  preferences.py  runner.py  types.py  verifiers.py
scripts/openclaw-local/: README.md  configure_openclaw_local_models.py  configure_openclaw_local_models.sh  init_lora.py  openclaw-local.env.example  run_openclaw_local_stack.sh  run_sleep_distill_step.sh  start_openclaw_gateway_local.sh  start_vllm_qwen3_8b.sh  start_vllm_qwen_7b_compat.sh  start_vllm_qwen_claas.sh
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_distillation_optimizer_state.py  test_engine_factory.py  test_env_fallbacks.py  test_eval_config.py  test_eval_runner.py  test_hydra_config.py  test_inference_backend.py  test_local_training_engine.py  test_pagination.py  test_s3_utils.py  test_sdpo_loss.py  test_sdpo_metrics_normalization.py  test_storage.py  test_teacher_helpers.py  test_tinker_engine.py  test_tinker_proxy.py
tests/integration/: conftest.py  run_tinker_stack_integration.sh  test_docker_stack_integration.py  test_local_engine_integration.py  test_tinker_stack_integration.py
(+27 files in other folders)
