[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claas"
version = "0.1.0"
description = "CLaaS: Continual Learning as a Service - SDPO-style distillation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "CLaaS Team" }
]
dependencies = [
    "modal==1.3.3",
    "fastapi==0.129.0",
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "uvicorn==0.41.0",
    "matplotlib==3.10.0",
    "hydra-core==1.3.2",
    "huggingface_hub==0.36.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "ty>=0.0.1",
]
teacher = [
    "vllm>=0.15.1",
]
local = [
    "torch>=2.1.0",
    "transformers==4.57.6",
    "peft==0.18.1",
]
tinker = [
    "tinker>=0.13.0",
    "tinker-cookbook",
]

[tool.hatch.build.targets.wheel]
packages = ["claas"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "gpu: requires a physical GPU",
    "integration: requires running tinker docker stack",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
